Closed Bug 413673 Opened 17 years ago Closed 17 years ago

Dojo dropdown buttons not working properly with JAWS and Minefield

Categories

(Core :: Disability Access APIs, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: gibson.becky, Assigned: aaronlev)

References

(Blocks 1 open bug, )

Details

Attachments

(1 file)

User-Agent:       Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9b3pre) Gecko/2008012304 Minefield/3.0b3pre
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9b3pre) Gecko/2008012304 Minefield/3.0b3pre

The role of the dropdown buttons is "button" and the state contains focused, focusable, has popup. This is the same information that is reported in FF 2.0.0.11.  However, I expected the role to be menu button in Minefield. Also, in FF 2, JAWS 9 reports "press space bar to activate" when a button receives focus - this does not always occur with Minefield. 

Reproducible: Sometimes

Steps to Reproduce:
1.load http://archive.dojotoolkit.org/dojo-2008-01-23/dojotoolkit/dijit/tests/form/test_Button.html
2.start JAWS and set it to virtual PC cursor mode off (insert-z toggles)
3.tab to edit button and press space
4. menu opens and focus should be on the first item (cut)



Writing this up because I believe the role should be menu button since the button is created with a role of button and a property of haspopup=true.
Assignee: nobody → aaronleventhal
Blocks: aria
Component: Disability Access → Disability Access APIs
Product: Firefox → Core
QA Contact: disability.access → accessibility-apis
Attachment #299275 - Flags: review?(marco.zehe)
Attachment #299275 - Flags: review?(marco.zehe) → review+
Attachment #299275 - Flags: approval1.9?
Attachment #299275 - Flags: approval1.9? → approval1.9+
Status: UNCONFIRMED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Verified using Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9b3) Gecko/2008020514 Firefox/3.0b3
Status: RESOLVED → VERIFIED
in-testsuite?
Flags: in-testsuite?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: