Bug 413673. ARIA drop down buttons not being exposed with MSAA button menu role. r=marcoz, a=schrep